--- a/resources/css/delivery.css
+++ b/resources/css/delivery.css
@@ -5,15 +5,10 @@
     box-sizing: border-box;
     font-family: 'Modern Antiqua', cursive;
 }
-body{
-    display: grid;
-    place-items: center;
-}
+
 nav, ul{
     list-style: none;
 }
-
-
 
 a {
     text-decoration: none;
@@ -24,6 +19,7 @@ a {
     padding: 2px 6px;
 }
 
+
 a:hover,
 a:active {
     opacity: 1;
@@ -32,11 +28,12 @@ a:active {
 }
 
 /* Header */
+
 header {
     background-color: #000;
     width: 100%;
-    min-width: 100vh;
-    position: absolute;
+    max-width: 1200px;
+    min-width: 306px;
     top:0;
     left: 0;
     display: flex;
@@ -46,21 +43,19 @@ header {
 }
 header img{
     width: 200px;
-    object-fit: cover;    
+    
 }
-
 header nav{
     display: flex;
 }
 header li a{
     color: #fff;
-    font-size: 1.6rem;
+    font-size: 16px;
     
 }
 
 header li{
-    margin: 0;
-    
+    margin: 0 40px;
 }
 
 header li:first-child{
@@ -83,62 +78,42 @@ header .item-nav{
     margin: 20px;
 }
 
-@media (max-width: 14300px){
+@media only screen and (max-width: 862px) and (max-width: 1116px){
     header {
-        flex-direction: column;
-    }
-    header img {
-        margin-bottom: 10px;
-    }
-    header .item-nav{
-        font-size: 1.8px;
-    }
-}
-@media only screen and (max-width: 1410px) and (max-width: 1255px) {
-    .menu a {
-        font-size: 18px;
-    }
-}
-@media only screen and (max-width: 1250x) and (max-width: 1000px) {
-    .menu a {
-        font-size: 16px;
-    }
-    header li{
-        justify-content: space-around;
-    }
-}
-@media only screen and (max-width: 846px) and (max-width: 508px){
-    .menu a {
-        font-size: 14px;
+        flex-direction: row;
+        width: 820px;
+        min-width: 306px;
+        justify-content: start;
+        align-items: baseline;
+       
     }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 959px) {
-    .menu a {
-        font-size: 14px;
+@media only screen and (max-width: 632px) and (max-width: 416px){
+    header {
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
     }
 }
 
-@media only screen and (max-width: 767px) {
-    .menu a {
-        font-size: 12px;
+@media only screen and (max-width: 521px) and (max-width: 306px){
+    header {
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
     }
 }
 
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-    .menu a {
-        font-size: 12px;
-    }
-}
-@media only screen and (max-width: 479px) {
-    .menu a {
-        font-size: 7px;
-    }
+.container{
+    width: 100%;
+    min-width: 306px;
+    max-width: 1200px;
 }
 
 
 section {
-    width: 100vh;
+    width: 817px;
     min-width: 100%;
     display: grid;
 }
@@ -150,23 +125,26 @@ h1 {
 }
 
 .section-steps{
-    margin-top: 250px;
+    margin-top: 100px;
 }
 .row {
     max-width: 1140px; 
-    margin: 0 auto 0 auto; 
+    width: 100%;
+    display: flex;
 }
+
 
 .steps-box:first-child {
     margin-top: 30px;
-    text-align: center;
+    padding-left: 2%;
 }
 
 .steps-box:last-child {
     text-align: start;
-    padding-left: 3%;
-    margin-top: 50px;
-    font-size: 1.6rem;
+    width: 100%;
+    padding-left: 4%;
+    margin-top: 100px;
+    font-size: 28px;
 }
 
 .app-screen {
@@ -196,6 +174,19 @@ h1 {
     margin-right: 25px;
 }
 
+@media only screen and (max-width: 1125px) and (max-width: 1200px){
+    div {
+        margin-bottom: 20px;
+    }
+    .row {
+        flex-direction: column;
+        align-items: center;
+        padding-top: 60px;
+        width: 750px;
+    }
+    
+}
+
 /* footer */
 
 footer {
@@ -204,7 +195,7 @@ footer {
     width: 100%;
     padding-top: 20px;
     padding-bottom: 40px;
-    font-size: 2.4rem;
+    font-size: 26px;
 }
 
 .footer-nav {
@@ -245,7 +236,7 @@ footer {
 
 .social-links li a:link,
 .social-links li a:visited {
-    font-size: 2.0rem;
+    font-size: 24px;
 }
 
 .logo-facebook,
@@ -271,22 +262,36 @@ footer {
     color: #517fa4;
 }
 
-footer p {
+footer .footer-paragrafo {
     color: #fff;
     text-align: center;
     margin-top: 60px;
-    font-size: 1.4rem;
+    font-size: 16px;
 }
 
 .promo-footer {
-    width: 100vh;
-    min-width: 100%;
+    max-width: 1200px;
+    min-width: 360px;
+    margin-top: 30px;
 }
 
-@media only screen and (max-width: 800px) and (max-width: 600px){
+@media only screen and (max-width: 862px) and (max-width: 1116px){
     footer {
-        flex-direction: column;
-        font-size: 1.2rem;
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
+        width: 820px;
+    }
+}
+
+@media only screen and (max-width: 632px) and (max-width: 416px){
+    footer {
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
+        margin-top: 100px;
+        width: 820px;
+        min-width: 306px;
     }
 }
 
