--- a/resources/css/cardapio.css
+++ b/resources/css/cardapio.css
@@ -1,12 +1,13 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+    margin: 0px;
+    padding: 0px;
     font-size: 100%;
     box-sizing: border-box;
     font-family: 'Modern Antiqua', cursive;
 }
 
-nav, ul{
+nav,
+ul {
     list-style: none;
 }
 
@@ -19,90 +20,170 @@ a {
     padding: 2px 6px;
 }
 
-
 a:hover,
 a:active {
     opacity: 1;
-    color: #8257E6; 
-    border-bottom: 4px solid #8257E6; 
+    color: #8257E6;
+    border-bottom: 4px solid #8257E6;
 }
 
-/* Header */
-
 header {
+    /* AVISAR JULIANO TIRAR O VH */
     background-color: #000;
     width: 100%;
-    max-width: 1200px;
-    min-width: 306px;
-    top:0;
+    position: absolute;
+    top: 0;
     left: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 20px 20px;
 }
-header img{
-    width: 200px;
-    
+
+
+.topo {
+    background-color: #000;
+    height: 200px;
+    width: 820px;
+    min-width: 360px;
+    max-width: 1200px;
 }
-header nav{
+
+header img {
+    width: 200px;
+}
+
+header nav {
     display: flex;
 }
-header li a{
+
+header li a {
     color: #fff;
-    font-size: 16px;
-    
+    font-size: 1.6rem;
 }
 
-header li{
-    margin: 0 40px;
+header li {
+    padding: 30px 10px;
 }
 
-header li:first-child{
+header li:first-child {
     margin-left: 0;
 }
-header li:last-child{
+
+header li:last-child {
     margin-right: 0;
 }
-header .menu{
+
+header .menu {
     display: flex;
     flex-grow: 1;
 }
-header .nav-menu{
+
+header .nav-menu {
     display: flex;
-    justify-content: space-between;
-
+    justify-content: space-around;
 }
 
-header .item-nav{
-    margin: 20px;
+header .item-nav {
+    margin: 0 auto;
 }
 
-@media only screen and (max-width: 862px) and (max-width: 1116px){
+nav .nav-menu {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+}
+
+.iconemenu {
+    font-size: 35px;
+    left: 35px;
+    top: 35px;
+    position: absolute;
+    display: none;
+    color: #fff;
+}
+
+#main-menu-checkbox {
+    position: absolute;
+    /* left: -100vw; */
+    z-index: 100;
+    left: 38px;
+    top: 38px;
+    width: 30px;
+    height: 30px;
+    opacity: 0;
+}
+
+.iconemenu {
+    cursor: pointer;
+}
+
+@media (max-width: 870px) {
+    header .nav-menu {
+        width: 100%;
+        display: block;
+    }
     header {
-        flex-direction: row;
-        width: 820px;
-        min-width: 306px;
-        justify-content: start;
-        align-items: baseline;
-       
+        /* background-color: rgba(0, 0, 0, 0.7); */
+        width: 100%;
+    }
+    header li {
+        padding: 10px 10px;
+    }
+    .menu a {
+        font-size: 20px;
+    }
+    .iconemenu {
+        display: block;
+    }
+    #main-menu-checkbox~header .nav-menu {
+        display: none;
+    }
+    #main-menu-checkbox:checked~header .nav-menu {
+        display: block;
     }
 }
 
-@media only screen and (max-width: 632px) and (max-width: 416px){
+@media (max-width: 14300px) {
     header {
-        flex-direction: row;
-        justify-content: start;
-        align-items: baseline;
+        flex-direction: column;
+    }
+    header img {
+        margin-bottom: 10px;
+    }
+    header .item-nav {
+        font-size: 16px;
     }
 }
 
-@media only screen and (max-width: 521px) and (max-width: 306px){
-    header {
-        flex-direction: row;
-        justify-content: start;
-        align-items: baseline;
+@media only screen and (max-width: 1410px) and (max-width: 1255px) {
+    .menu a {
+        font-size: 18px;
     }
+}
+
+@media only screen and (max-width: 1250px) and (max-width: 1000px) {
+    .menu a {
+        font-size: 16px;
+    }
+}
+
+@media only screen and (max-width: 789px) {
+    .menu a {
+        font-size: 16px;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+    .menu a {
+        font-size: 14px;
+    }
+}
+
+
+.menu{
+    width: 820px;
+    min-width: 100%;
 }
 
 article {
@@ -119,11 +200,9 @@ h1 {
 }
 
 section{
-    width: 600px;
-    min-width: 306px;
-    max-width: 1200px;
+    width: 680px;
     float: right;
-    padding-right: 1%;
+    padding-right: 2%;
     height: 0px;
 }
 
@@ -134,9 +213,9 @@ section{
 }
 
 .cardapio{
-    margin-top: 100px;
+    margin-top: 300px;
     display: block;
-    height: 750px
+    height: 700px;
 }
 
 
@@ -234,40 +313,29 @@ section{
     top: -8px;
 }
 
-@media only screen and (max-width: 1125px) and (max-width: 1200px){
-    article {
-        margin-bottom: 20px;
-    }
+
+@media only screen and (max-width: 1128px) and (max-width: 1200px){
     .home-menu {
         flex-direction: column;
         align-items: center;
-        padding-top: 60px;
-        width: 750px;
+        padding-top: 50px;
+        width: 650px;
     }
-
-    .cardapio{
-        width: auto;
-    }
-    
-}
-
-@media only screen and (max-width: 1133px) and (max-width: 918px){
-    article {
-        display: flex;
-        justify-content: center;
-        width: auto;
-        margin-bottom: 20px;
-    }
-    .home-menu {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .cardapio{
+    .slider{
+        margin: 0 auto;
         width: 800px;
     }
-    
+
+    .cardapio{
+        margin-top: 420px;
+        width: 820px;
+        margin-bottom: 280px;
+    }
+    .home-menu ul{
+        margin: 0 auto;
+    }
 }
+
 
 
 /* footer */
@@ -355,7 +423,6 @@ footer .footer-paragrafo {
 .promo-footer {
     max-width: 1200px;
     min-width: 360px;
-    margin-top: 350px;
 }
 
 @media only screen and (max-width: 862px) and (max-width: 1116px){
@@ -365,6 +432,7 @@ footer .footer-paragrafo {
         align-items: baseline;
         width: 820px;
     }
+
 }
 
 @media only screen and (max-width: 632px) and (max-width: 416px){
@@ -376,4 +444,5 @@ footer .footer-paragrafo {
         width: 820px;
         min-width: 306px;
     }
+    
 }
