--- a/resources/css/reservas.css
+++ b/resources/css/reservas.css
@@ -1,13 +1,12 @@
-* {
+*{
     margin: 0;
-    padding: 0px;
+    padding: 0;
     font-size: 100%;
     box-sizing: border-box;
     font-family: 'Modern Antiqua', cursive;
 }
 
-nav,
-ul {
+nav, ul{
     list-style: none;
 }
 
@@ -20,123 +19,106 @@ a {
     padding: 2px 6px;
 }
 
+.container-promo{
+    width: 800px;
+    min-width: 100%;
+    max-width: 100%;
+}
+
+
 a:hover,
 a:active {
     opacity: 1;
-    color: #8257E6;
-    border-bottom: 4px solid #8257E6;
+    color: #8257E6; 
+    border-bottom: 4px solid #8257E6; 
 }
 
+/* Header */
 
-.container-img-processos li {
-    padding-left: 15px;
-}
-
-.registroformulario {
-    width: 800px;
-    margin: auto;
-    color: #000;
-    padding: 10px 0px 10px 0px;
-    text-align: center;
-    border-radius: 15px 15px 0px 0px;
-}
-
-.registroformulario h1 {
-    font-size: 25px;
-}
-
-.container-formulario-conteudo {
-    display: flow-root;
-    min-width: 100vh;
-    align-self: center;
-}
-
-@media only screen and (max-width: 805px) {
-    .container-formulario-conteudo {
-        width: 80%;
-    }
-    .container-formulario-conteudo form label {
-        width: 100%;
-    }
-    .container-formulario-conteudo form input {
-        width: 100%;
-    }
-}
-
-@media only screen and (max-width: 805px) {
-    .registroformulario {
-        width: 100vh;
-        display: flex;
-        min-width: 100%;
-        justify-content: center;
-        text-align: center;
-    }
-}
-
-@media only screen and (max-width: 805px) {
-    .container-formulario-conteudo #telefone .inputtelefone {
-        width: 100%;
-        margin: 0px;
-    }
-    .container-formulario-conteudo #telefone .inputDDD {
-        width: 25%;
-    }
-}
-
-form {
-    padding: 20px;
-}
-
-input[type=text] {
-    margin: 10px 0px;
+header {
+    background-color: #000;
     width: 100%;
-    display: inline-block;
-    box-sizing: border-box;
-    line-height: 50px;
-    border-radius: 6px;
-    color: #555555;
-}
-
-label {
-    width: 100%;
+    max-width: 1200px;
+    min-width: 306px;
+    top:0;
+    left: 0;
     display: flex;
-    justify-content: end;
-    box-sizing: border-box;
-    text-transform: uppercase;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px 20px;
+}
+header img{
+    width: 200px;
+    
+}
+header nav{
+    display: flex;
+}
+header li a{
+    color: #fff;
+    font-size: 16px;
+    
 }
 
-#telefone {
-    display: inline-block;
-    width: 74%;
-    box-sizing: border-box;
+header li{
+    margin: 0 40px;
 }
 
-#telefone .inputDDD {
-    width: 25%;
+header li:first-child{
+    margin-left: 0;
+}
+header li:last-child{
+    margin-right: 0;
+}
+header .menu{
+    display: flex;
+    flex-grow: 1;
+}
+header .nav-menu{
+    display: flex;
+    justify-content: space-between;
+
 }
 
-#telefone .inputtelefone {
-    width: 70%;
-    margin: 0px 0px 0 20px;
+header .item-nav{
+    margin: 20px;
 }
 
-textarea {
-    margin: 10px 0px 10px 5px;
-    width: 100%;
-    display: inline-block;
-    box-sizing: border-box;
-    line-height: 50px;
-    border-radius: 6px;
-    font-size: 22px;
-    color: #555555;
+@media only screen and (max-width: 862px) and (max-width: 1116px){
+    header {
+        flex-direction: row;
+        width: 820px;
+        min-width: 306px;
+        justify-content: start;
+        align-items: baseline;
+       
+    }
 }
 
-#observacao label {
-    display: block;
-    float: left;
-    padding: 10px 0 0 0;
+@media only screen and (max-width: 632px) and (max-width: 416px){
+    header {
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
+    }
 }
 
+@media only screen and (max-width: 521px) and (max-width: 306px){
+    header {
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
+    }
+}
+
+h1 {
+    color: #000;
+    font-size: 30px;
+    text-align: center;
+    margin: 20px 10px;
+}
+
+/* color: rgb(167, 158, 158); */
 .botao {
     background-color: #8257E6;
     font-size: 26px;
@@ -151,334 +133,152 @@ textarea {
     cursor: pointer;
     transition: 0.25s;
 }
-
-
-/* Header */
-
-
-
-
-header {
-    background-color: #000;
-    width: 100%;
-    min-width: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 20px 20px;
-    /* display: none; */
+.row {
+    max-width: 1140px;
+    margin: 0 auto 0 auto; 
+}
+h1, h2, h3 {
+    font-weight: 300;
+    text-transform: uppercase;
 }
 
-header img {
-    width: 200px;
-}
-
-header nav {
-    display: flex;
-}
-
-header li a {
+h1 {
+    margin-top: 0;
+    margin-bottom: 20px;
     color: #fff;
-    font-size: 1.6rem;
+    font-size: 240%;
+    word-spacing: 4px;
+    letter-spacing: 1px;
+}
+.reserva-h1{
+    color: #000;
 }
 
-header li {
-    padding: 30px 10px;
-}
-
-header li:first-child {
-    margin-left: 0;
-}
-
-header li:last-child {
-    margin-right: 0;
-}
-
-header .menu {
-    display: flex;
-    flex-grow: 1;
-}
-
-header .nav-menu {
-    display: flex;
-    justify-content: space-around;
-}
-
-header .item-nav {
-    margin: 0 auto;
-}
-
-nav .nav-menu {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-}
-
-@media (max-width: 14300px) {
-    header {
-        flex-direction: column;
-    }
-    header img {
-        margin-bottom: 10px;
-    }
-    header .item-nav {
-        font-size: 1.4rem;
-    }
-}
-
-@media only screen and (max-width: 1410px) and (max-width: 1255px) {
-    .menu a {
-        font-size: 1.6rem;
-    }
-}
-
-@media only screen and (max-width: 1250x) and (max-width: 1000px) {
-    .menu a {
-        font-size: 1.4rem;
-    }
-}
-
-@media only screen and (max-width: 789px) {
-    .menu a {
-        font-size: 1.2rem;
-    }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 959px) {
-    .menu a {
-        font-size: 1.0rem;
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    .menu a {
-        font-size: 16px;
-    }
-}
-
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-    .menu a {
-        font-size: 12px;
-    }
-}
-
-@media only screen and (max-width: 479px) {
-    .menu a {
-        font-size: 7px;
-    }
+h2 {
+    font-size: 180%;
+    word-spacing: 2px;
+    text-align: center; 
+    margin-bottom: 30px;
+    letter-spacing: 1px;
 }
 section {
-    margin: 0 auto;
+    padding: 60px 0;
 }
 
-.container-img {
-    margin-top: 220px;
-    width: 100vh;
+.section-reservas{
+    text-align: center;
+}
+.descripition{
+    word-spacing: 4px;
+}
+
+.reserva-h2{
+    margin: 10px;
+}
+
+.section-testimonials {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/reservas/1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: #fff; 
+    background-attachment: fixed;
+    height: 500px;
+}
+
+.section-descript{
     display: flex;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
 }
 
-.container-img p {
-    font-size: 65px;
-    margin: 40px;
+blockquote {
+    padding: 2%;
+    font-style: italic; 
+    line-height: 145%; 
 }
 
-@media only screen and (max-width: 600px) {
-    .container-img p {
-        font-size: 70px;
-    }
+blockquote::before {
+    content: "\201C";
+    font-size: 400%;
+
 }
 
-.wrapper {
-    margin: 5px auto 0;
-    padding: 20px;
-    box-sizing: border-box;
+cite {
+    font-size: 90%;
+    margin-top: 25px;
+    display:block;
 }
 
-.content {
-    text-align: center;
-    margin: 0px 0px 50px 0px;
+cite img {
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align:middle;
 }
 
-.content h1 {
-    letter-spacing: 1px;
-    font-size: 20px;
-}
 
-.form {
-    width: 100%;
-    margin: 25px 0;
+.col:first-child {
+    margin-left: 0;
 }
-
-.top-form,
-.middle-form,
-.bottom-form {
-    width: 100%;
-    min-height: 65px;
-    margin: 10px 0;
-    overflow: hidden;
+.span-1-of-3 {
+    width: 32.26%;
 }
-
-.form input[type="text"],
-.form textarea {
-    padding: 15px 5px;
-    box-sizing: border-box;
-    width: 99%;
-    border: 2px solid #000;
-    outline: none;
-    transition: all 0.2s ease;
-}
-
-.form input:focus,
-.form textarea:focus {
-    border-color: #4ca14f;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.0125), 0 0 8px rgba(76, 161, 175, 0.5);
-}
-
-.form .label {
-    margin-bottom: 5px;
-    text-transform: capitalize;
-}
-
-.top-form .inner-form {
-    width: 29.9%;
-    float: left;
-    margin-right: 5%;
-}
-
-.top-form .inner-form:last-child {
-    margin-right: 0;
-}
-
-.middle-form {
-    clear: both;
-}
-
-.bottom-form textarea {
-    height: 80px;
-}
-
-.btn {
-    width: 50%;
-    background-color: #8257E6;
+.col {
     display: block;
-    margin: 50px auto;
-    text-align: center;
-    border-radius: 12px;
-    border: 2px solid #266473;
-    padding: 15px;
-    outline: none;
-    color: #000;
-    cursor: pointer;
-    transition: 0.25s;
-}
-
-@media screen and (max-width: 600px) {
-    .wrapper {
-        margin: 25px auto 0;
-    }
-    .top-form .inner-form {
-        width: 100%;
-        margin: 5px 0;
-    }
-}
-
-footer {
-    background-color: #000;
-    padding: 20px;
-    width: 100%;
-    padding-top: 20px;
-    padding-bottom: 40px;
-    font-size: 2.4rem;
-}
-
-.footer-nav {
-    list-style: none;
     float: left;
+    margin: 1% 0 1% 1.6%;
 }
-
-.social-links {
-    list-style: none;
-    float: right;
-}
-
-.footer-nav li,
-.social-links li {
-    display: inline-block;
-    margin-right: 20px;
-}
-
-.footer-nav li:last-child,
-.social-links li:last-child {
-    margin-right: 0;
-}
-
-.footer-nav li a:link,
-.footer-nav li a:visited,
-.social-links li a:link,
-.social-links li a:visited {
-    text-decoration: none;
-    border: 0;
-    color: #fff;
-    transition: color 0.2s;
-}
-
-.footer-nav li a:hover,
-.footer-nav li a:active {
-    color: #8257E6;
-}
-
-.social-links li a:link,
-.social-links li a:visited {
-    font-size: 2.0rem;
-}
-
-.logo-facebook,
-.logo-googleplus,
-.logo-twitter,
-.logo-instagram {
-    transition: color 0.2s;
-}
-
-.logo-facebook:hover {
-    color: #3b5998;
-}
-
-.logo-twitter:hover {
-    color: #00aced;
-}
-
-.logo-googleplus:hover {
-    color: #dd4b39;
-}
-
-.logo-instagram:hover {
-    color: #517fa4;
-}
-
-footer .footer-paragrafo {
-    color: #fff;
-    text-align: center;
-    margin-top: 60px;
-    font-size: 1.4rem;
-}
-
-.promo-footer {
-    width: 100vh;
-    min-width: 100%;
-}
-
-@media only screen and (max-width: 800px) and (max-width: 600px) {
-    footer {
-        flex-direction: column;
+@media only screen and (max-width: 1140px){
+    .row {
+        padding: 0 2%;
     }
-    footer p {
-        margin-bottom: 0px;
-        font-size: 1.2rem;
+    .row {
+        max-width: 1140px;
+        margin: 0 auto 0 auto;
+    }
+    .row {
+        zoom: 1;
     }
 }
+@media only screen and (max-width: 835px){
+    html{
+        font-size: 16px;
+    }
+    section{
+        padding: 40px 0;
+        min-width: 820px;
+    }
+
+    .row,
+    .hero-text-box{
+        padding: 0 4%;
+    }
+    .main-nav {
+        display: none;
+    }
+    .span-1-of-4{
+        width: 48%;
+    }
+    .col{
+        margin: 0 0 0 0;
+    }
+    h1 {
+        font-size: 200%;
+    }
+}
+@media only screen and (max-width: 550px){
+    .section-testimonials{
+        width: 820px;
+        height: 700px;
+    }
+    .col{
+        width: 100%;
+    }
+    .steps-box:first-child{
+        text-align: center;
+    }
+}
+
+
+
+
+
+
