--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,12 +1,13 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+    margin: 0px;
+    padding: 0px;
     font-size: 100%;
     box-sizing: border-box;
     font-family: 'Modern Antiqua', cursive;
 }
 
-nav, ul{
+nav,
+ul {
     list-style: none;
 }
 
@@ -19,100 +20,171 @@ a {
     padding: 2px 6px;
 }
 
-.container{
-    width: 1200px;
-    min-width: 100%;
-    max-width: 100%;
-}
-
-
 a:hover,
 a:active {
     opacity: 1;
-    color: #8257E6; 
-    border-bottom: 4px solid #8257E6; 
+    color: #8257E6;
+    border-bottom: 4px solid #8257E6;
 }
 
-/* Header */
-
 header {
+    /* AVISAR JULIANO TIRAR O VH */
     background-color: #000;
     width: 100%;
-    max-width: 1200px;
-    min-width: 306px;
-    top:0;
+    position: absolute;
+    top: 0;
     left: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 20px 20px;
 }
-header img{
-    width: 200px;
-    
+
+
+.topo {
+    background-color: #000;
+    height: 200px;
+    width: 820px;
+    min-width: 360px;
+    max-width: 1200px;
 }
-header nav{
+
+header img {
+    width: 200px;
+}
+
+header nav {
     display: flex;
 }
-header li a{
+
+header li a {
     color: #fff;
-    font-size: 16px;
-    
+    font-size: 1.6rem;
 }
 
-header li{
-    margin: 0 40px;
+header li {
+    padding: 30px 10px;
 }
 
-header li:first-child{
+header li:first-child {
     margin-left: 0;
 }
-header li:last-child{
+
+header li:last-child {
     margin-right: 0;
 }
-header .menu{
+
+header .menu {
     display: flex;
     flex-grow: 1;
 }
-header .nav-menu{
+
+header .nav-menu {
     display: flex;
-    justify-content: space-between;
-
+    justify-content: space-around;
 }
 
-header .item-nav{
-    margin: 20px;
+header .item-nav {
+    margin: 0 auto;
 }
 
+nav .nav-menu {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+}
 
+.iconemenu {
+    font-size: 35px;
+    left: 35px;
+    top: 35px;
+    position: absolute;
+    display: none;
+    color: #fff;
+}
 
-@media only screen and (max-width: 862px) and (max-width: 1116px){
+#main-menu-checkbox {
+    position: absolute;
+    /* left: -100vw; */
+    z-index: 100;
+    left: 38px;
+    top: 38px;
+    width: 30px;
+    height: 30px;
+    opacity: 0;
+}
+
+.iconemenu {
+    cursor: pointer;
+}
+
+@media (max-width: 770px) {
+    header .nav-menu {
+        width: 100%;
+        display: block;
+    }
     header {
-        flex-direction: row;
-        width: 820px;
-        min-width: 306px;
-        justify-content: start;
-        align-items: baseline;
-       
+        background-color: rgba(0, 0, 0, 0.7);
+        width: 100%;
+    }
+    header li {
+        padding: 10px 10px;
+    }
+    .menu a {
+        font-size: 20px;
+    }
+    .iconemenu {
+        display: block;
+    }
+    #main-menu-checkbox~header .nav-menu {
+        display: none;
+    }
+    #main-menu-checkbox:checked~header .nav-menu {
+        display: block;
     }
 }
 
-@media only screen and (max-width: 632px) and (max-width: 416px){
+@media (max-width: 14300px) {
     header {
-        flex-direction: row;
-        justify-content: start;
-        align-items: baseline;
+        flex-direction: column;
+    }
+    header img {
+        margin-bottom: 10px;
+    }
+    header .item-nav {
+        font-size: 16px;
     }
 }
 
-@media only screen and (max-width: 521px) and (max-width: 306px){
-    header {
-        flex-direction: row;
-        justify-content: start;
-        align-items: baseline;
+@media only screen and (max-width: 1410px) and (max-width: 1255px) {
+    .menu a {
+        font-size: 18px;
     }
 }
 
+@media only screen and (max-width: 1250x) and (max-width: 1000px) {
+    .menu a {
+        font-size: 16px;
+    }
+}
+
+@media only screen and (max-width: 789px) {
+    .menu a {
+        font-size: 16px;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+    .menu a {
+        font-size: 14px;
+    }
+}
+
+
+.menu{
+    width: 820px;
+    min-width: 100%;
+}
 
 
 /* container-img */
@@ -125,7 +197,7 @@ section {
 
 
 section .section-img{
-    width: 800px;
+    width: 820px;
     max-width: 1150px;
     min-width: 300px;
     padding-top: 50px;
@@ -135,12 +207,12 @@ section .section-img{
 }
 
 .container-p{
-    font-size: 26px;
-    width: 800px;
+    font-size: 28px;
+    width: 900px;
+    text-align: center;
     min-width: 306px;
     max-width: 1150px;
     margin: 10px;
-    margin-bottom: 50px;
     font-style: italic;
 }
 
@@ -151,7 +223,12 @@ section .section-img{
         justify-content: start;
         align-items: baseline;
         margin: 0 auto;
-        padding-top: 100px;
+        padding-top: 50px;
+        padding-left: 1%;
+    }
+    .container-p{
+        font-size: 22px;
+        width: 800px;
     }
     
 }
@@ -161,6 +238,7 @@ section .section-img{
         flex-direction: column;
         justify-content: start;
         align-items: baseline;
+        width: 820px;
     }
     section .section-img{
         width: 800px;
