--- a/resources/css/cardapio.css
+++ b/resources/css/cardapio.css
@@ -231,6 +231,7 @@ section{
     width: 1200px;
     max-width: 500px;
     min-height: 450px;
+    padding-left: 1%;
     position: sticky;
 }
 
@@ -319,7 +320,7 @@ section{
         flex-direction: column;
         align-items: center;
         padding-top: 50px;
-        width: 650px;
+        width: 800px;
     }
     .slider{
         margin: 0 auto;
@@ -331,7 +332,7 @@ section{
         width: 820px;
         margin-bottom: 280px;
     }
-    .home-menu ul{
+    ul{
         margin: 0 auto;
     }
 }
